@@ -77,7 +77,7 @@
 
 <addon id="plugin.program.utorrent"
        name="uTorrent"
-       version="1.0.3"
+       version="1.0.4"
        provider-name="Taxigps">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
